mixdown sound op not exporting full length #49172

Closed
opened 2016-08-26 17:07:46 +02:00 by Flavio Perez · 6 comments

System Information
OS : tested on Windows 10 / Mac OSX10.10 / Linux Mint 10.3

Blender Version
Broken: 2.77a

Short description of error
When using the API to export sound with the mixdown operator bpy.ops.sound.mixdown the sound is exported 1 frame shorter than the defined timeline. Trying to export a sound with a timeline from 1 to 1 will freeze or crash blender.

Exact steps for others to reproduce the error

  • Import some sound in the VSE
  • set the timeline
  • use the operator mixdown, ex : bpy.ops.sound.mixdown(filepath="/tmp/mixdown_export.wav", container="WAV")
  • the result is 1 frame shorter than the timeline

I join a blend file with an embedded sound if you want to try.
sound.blend

I think I've located the issue, which is in source/blender/editors/sound/sound_ops.c, where the lastframe looks to be badly call as it does not include the end frame :

AUD_mixdown(scene->sound_scene, SFRA * specs.rate / FPS, (EFRA - SFRA) * specs.rate / FPS,
		                     accuracy, filename, specs, container, codec, bitrate);

Should be :

AUD_mixdown(scene->sound_scene, SFRA * specs.rate / FPS, (EFRA - SFRA + 1) * specs.rate / FPS,
		                     accuracy, filename, specs, container, codec, bitrate);

same for his fellow friend AUD_mixdown_per_channel just above.

UPDATE : As mentionned in the provided file, trying to export sound where the start frame and end frame are the same, like from 10 to 10 (it should be a 1 frame long sound file ), will freeze or crash blender.

Any thoughts ?

Thanks

F.

**System Information** OS : tested on Windows 10 / Mac OSX10.10 / Linux Mint 10.3 **Blender Version** Broken: 2.77a **Short description of error** When using the API to export sound with the mixdown operator bpy.ops.sound.mixdown the sound is exported 1 frame shorter than the defined timeline. Trying to export a sound with a timeline from 1 to 1 will freeze or crash blender. **Exact steps for others to reproduce the error** - Import some sound in the VSE - set the timeline - use the operator mixdown, ex : bpy.ops.sound.mixdown(filepath="/tmp/mixdown_export.wav", container="WAV") - the result is 1 frame shorter than the timeline I join a blend file with an embedded sound if you want to try. [sound.blend](https://archive.blender.org/developer/F343964/sound.blend) I think I've located the issue, which is in source/blender/editors/sound/sound_ops.c, where the lastframe looks to be badly call as it does not include the end frame : ``` AUD_mixdown(scene->sound_scene, SFRA * specs.rate / FPS, (EFRA - SFRA) * specs.rate / FPS, accuracy, filename, specs, container, codec, bitrate); ``` Should be : ``` AUD_mixdown(scene->sound_scene, SFRA * specs.rate / FPS, (EFRA - SFRA + 1) * specs.rate / FPS, accuracy, filename, specs, container, codec, bitrate); ``` same for his fellow friend AUD_mixdown_per_channel just above. UPDATE : As mentionned in the provided file, trying to export sound where the start frame and end frame are the same, like from 10 to 10 (it should be a 1 frame long sound file ), will freeze or crash blender. Any thoughts ? Thanks F.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @flav-3

Added subscriber: @flav-3

Added subscribers: @neXyon, @Sergey

Added subscribers: @neXyon, @Sergey
Joerg Mueller was assigned by Sergey Sharybin 2016-08-29 10:09:42 +02:00

@neXyon, mind having a glance here? :)

@neXyon, mind having a glance here? :)

This issue was referenced by cc2faa409f

This issue was referenced by cc2faa409fc8508fb0131bdc344651f2863957f6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49172
No description provided.