Fix T49172: mixdown sound op not exporting full length

Thanks Flavio Perez for the fix.